src/include/stonefs/libstonefs.h

struct stone_mount_info;
struct stone_dir_result;
struct snap_metadata {
  const char *key;
  const char *value;
};
struct snap_info {
  uint64_t id;
  size_t nr_snap_metadata;
  struct snap_metadata *snap_metadata;
};
const char *stone_version(int *major, int *minor, int *patch);
int stone_create(struct stone_mount_info **cmount, const char * const id);
typedef void *rados_t;
int stone_create_from_rados(struct stone_mount_info **cmount, rados_t cluster);
int stone_init(struct stone_mount_info *cmount);
int stone_select_filesystem(struct stone_mount_info *cmount, const char *fs_name);
int stone_mount(struct stone_mount_info *cmount, const char *root);
int64_t stone_get_fs_cid(struct stone_mount_info *cmount);
int stone_mds_command(struct stone_mount_info *cmount,
    const char *mds_spec,
    const char **cmd,
    size_t cmdlen,
    const char *inbuf, size_t inbuflen,
    char **outbuf, size_t *outbuflen,
    char **outs, size_t *outslen);
void stone_buffer_free(char *buf);
int stone_unmount(struct stone_mount_info *cmount);
int stone_abort_conn(struct stone_mount_info *cmount);
void stone_shutdown(struct stone_mount_info *cmount);
int stone_getaddrs(struct stone_mount_info *cmount, char** addrs);
uint64_t stone_get_instance_id(struct stone_mount_info *cmount);
int stone_conf_read_file(struct stone_mount_info *cmount, const char *path_list);
int stone_conf_parse_argv(struct stone_mount_info *cmount, int argc, const char **argv);
int stone_conf_set(struct stone_mount_info *cmount, const char *option, const char *value);
int stone_set_mount_timeout(struct stone_mount_info *cmount, uint32_t timeout);
int stone_conf_get(struct stone_mount_info *cmount, const char *option, char *buf, size_t len);
int stone_statfs(struct stone_mount_info *cmount, const char *path, struct statvfs *stbuf);
int stone_sync_fs(struct stone_mount_info *cmount);
const char* stone_getcwd(struct stone_mount_info *cmount);
int stone_chdir(struct stone_mount_info *cmount, const char *path);
int stone_opendir(struct stone_mount_info *cmount, const char *name, struct stone_dir_result **dirpp);
int stone_closedir(struct stone_mount_info *cmount, struct stone_dir_result *dirp);
struct dirent * stone_readdir(struct stone_mount_info *cmount, struct stone_dir_result *dirp);
void stone_rewinddir(struct stone_mount_info *cmount, struct stone_dir_result *dirp);
int64_t stone_telldir(struct stone_mount_info *cmount, struct stone_dir_result *dirp);
void stone_seekdir(struct stone_mount_info *cmount, struct stone_dir_result *dirp, int64_t offset);
int stone_mkdir(struct stone_mount_info *cmount, const char *path, mode_t mode);
int stone_mksnap(struct stone_mount_info *cmount, const char *path, const char *name,
                mode_t mode, struct snap_metadata *snap_metadata, size_t nr_snap_metadata);
int stone_rmsnap(struct stone_mount_info *cmount, const char *path, const char *name);
int stone_mkdirs(struct stone_mount_info *cmount, const char *path, mode_t mode);
int stone_rmdir(struct stone_mount_info *cmount, const char *path);
int stone_link(struct stone_mount_info *cmount, const char *existing, const char *newname);
int stone_readlink(struct stone_mount_info *cmount, const char *path, char *buf, int64_t size);
int stone_symlink(struct stone_mount_info *cmount, const char *existing, const char *newname);
int stone_unlink(struct stone_mount_info *cmount, const char *path);
int stone_rename(struct stone_mount_info *cmount, const char *from, const char *to);
int stone_fstatx(struct stone_mount_info *cmount, int fd, struct stone_statx *stx,
		unsigned int want, unsigned int flags);
int stone_statx(struct stone_mount_info *cmount, const char *path, struct stone_statx *stx,
	       unsigned int want, unsigned int flags);
int stone_setattrx(struct stone_mount_info *cmount, const char *relpath, struct stone_statx *stx, int mask, int flags);
int stone_fsetattrx(struct stone_mount_info *cmount, int fd, struct stone_statx *stx, int mask);
int stone_chmod(struct stone_mount_info *cmount, const char *path, mode_t mode);
int stone_lchmod(struct stone_mount_info *cmount, const char *path, mode_t mode);
int stone_fchmod(struct stone_mount_info *cmount, int fd, mode_t mode);
int stone_chown(struct stone_mount_info *cmount, const char *path, int uid, int gid);
int stone_fchown(struct stone_mount_info *cmount, int fd, int uid, int gid);
int stone_lchown(struct stone_mount_info *cmount, const char *path, int uid, int gid);
int stone_utime(struct stone_mount_info *cmount, const char *path, struct utimbuf *buf);
int stone_futime(struct stone_mount_info *cmount, int fd, struct utimbuf *buf);
int stone_utimes(struct stone_mount_info *cmount, const char *path, struct timeval times[2]);
int stone_lutimes(struct stone_mount_info *cmount, const char *path, struct timeval times[2]);
int stone_futimes(struct stone_mount_info *cmount, int fd, struct timeval times[2]);
int stone_futimens(struct stone_mount_info *cmount, int fd, struct timespec times[2]);
int stone_flock(struct stone_mount_info *cmount, int fd, int operation,
	       uint64_t owner);
int stone_mknod(struct stone_mount_info *cmount, const char *path, mode_t mode, dev_t rdev);
int stone_open(struct stone_mount_info *cmount, const char *path, int flags, mode_t mode);
int stone_close(struct stone_mount_info *cmount, int fd);
int64_t stone_lseek(struct stone_mount_info *cmount, int fd, int64_t offset, int whence);
int stone_read(struct stone_mount_info *cmount, int fd, char *buf, int64_t size, int64_t offset);
int stone_preadv(struct stone_mount_info *cmount, int fd, const struct iovec *iov, int iovcnt,
           int64_t offset);
int stone_write(struct stone_mount_info *cmount, int fd, const char *buf, int64_t size,
	       int64_t offset);
int stone_pwritev(struct stone_mount_info *cmount, int fd, const struct iovec *iov, int iovcnt,
           int64_t offset);
int stone_fsync(struct stone_mount_info *cmount, int fd, int syncdataonly);
int stone_fallocate(struct stone_mount_info *cmount, int fd, int mode,
	                      int64_t offset, int64_t length);
int stone_lazyio(struct stone_mount_info *cmount, int fd, int enable);
int stone_lazyio_propagate(struct stone_mount_info *cmount, int fd, int64_t offset, size_t count);
int stone_lazyio_synchronize(struct stone_mount_info *cmount, int fd, int64_t offset, size_t count);
int stone_getxattr(struct stone_mount_info *cmount, const char *path, const char *name, 
	void *value, size_t size);
int stone_fgetxattr(struct stone_mount_info *cmount, int fd, const char *name,
	void *value, size_t size);
int stone_lgetxattr(struct stone_mount_info *cmount, const char *path, const char *name, 
	void *value, size_t size);
int stone_listxattr(struct stone_mount_info *cmount, const char *path, char *list, size_t size);
int stone_flistxattr(struct stone_mount_info *cmount, int fd, char *list, size_t size);
int stone_llistxattr(struct stone_mount_info *cmount, const char *path, char *list, size_t size);
int stone_removexattr(struct stone_mount_info *cmount, const char *path, const char *name);
int stone_fremovexattr(struct stone_mount_info *cmount, int fd, const char *name);
int stone_lremovexattr(struct stone_mount_info *cmount, const char *path, const char *name);
int stone_setxattr(struct stone_mount_info *cmount, const char *path, const char *name, 
	const void *value, size_t size, int flags);
int stone_fsetxattr(struct stone_mount_info *cmount, int fd, const char *name,
	const void *value, size_t size, int flags);
int stone_lsetxattr(struct stone_mount_info *cmount, const char *path, const char *name, 
	const void *value, size_t size, int flags);
int stone_get_file_pool_name(struct stone_mount_info *cmount, int fh, char *buf, size_t buflen);
int stone_get_default_data_pool_name(struct stone_mount_info *cmount, char *buf, size_t buflen);
int stone_get_file_layout(struct stone_mount_info *cmount, int fh, int *stripe_unit, int *stripe_count, int *object_size, int *pg_pool);
int stone_get_file_replication(struct stone_mount_info *cmount, int fh);
int stone_get_path_replication(struct stone_mount_info *cmount, const char *path);
int stone_get_pool_id(struct stone_mount_info *cmount, const char *pool_name);
int stone_get_pool_replication(struct stone_mount_info *cmount, int pool_id);
int stone_debug_get_fd_caps(struct stone_mount_info *cmount, int fd);
int stone_debug_get_file_caps(struct stone_mount_info *cmount, const char *path);
uint32_t stone_get_cap_return_timeout(struct stone_mount_info *cmount);
mode_t stone_umask(struct stone_mount_info *cmount, mode_t mode);
void stone_set_uuid(struct stone_mount_info *cmount, const char *uuid);
void stone_set_session_timeout(struct stone_mount_info *cmount, unsigned timeout);
int stone_get_snap_info(struct stone_mount_info *cmount,
                       const char *path, struct snap_info *snap_info);
void stone_free_snap_info_buffer(struct snap_info *snap_info);